# remains

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
docs/demo/: demo.md  v2-demo.md
docs/specs/: v2-architecture.md
examples/: data_bad.ttl  data_good.ttl  ontology.ttl  shapes.ttl
examples/dcat/: data_bad.ttl  data_good.ttl  ontology.ttl  shapes.ttl
examples/foaf/: data_bad.ttl  data_good.ttl  ontology.ttl  shapes.ttl
examples/schema-org/: data_bad.ttl  data_good.ttl  ontology.ttl  shapes.ttl
nrc-demo/: generate-ttl.py  ontology.ttl  shapes.ttl  transcript-2026-03-04.ttl  transcript-ML25017A206.ttl  transcript-ML25065A106.ttl  transcript-ML25066A005.ttl  transcript-ML25098A118.ttl  transcript-ML25104A260.ttl  transcript-ML25104A265.ttl  transcript-ML25119A143.ttl  transcript-ML25139A570.ttl  transcript-ML25174A277.ttl  transcript-ML25197A041.ttl  transcript-ML25258A165.ttl  transcript-ML25322A364.ttl
pi-agent/: AGENTS.md  settings.json
pi-agent/extensions/exe-dev/: index.ts  package.json
skills/dregs/: SKILL.md
skills/remains/: SKILL.md
src/dregs/: __init__.py  analytics.py  cli.py  models.py  prompt.py  sparql.py  store.py  viz.py
src/dregs/system/: system-ontology.ttl  system-shapes.ttl
src/remains/: __init__.py  analytics.py  cli.py  display.py  models.py  prompt.py  sparql.py  store.py  viz.py
src/remains/system/: system-ontology.ttl  system-shapes.ttl
tests/: conftest.py  test_core.py  test_examples.py  test_turso.py  test_turso_remote.py  test_v2.py  test_validation_semantics.py  test_viz.py
