[project]
name = "remains"
version = "0.1.0"
description = "SQLite-backed RDF triple store with SPARQL, OWL reasoning, and SHACL validation. CLI-first for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "rdflib>=7.0.0",
    "pyshacl>=0.26.0",
    "click>=8.0.0",
    "libsql>=0.1.0",
    "networkx>=3.0",
]

[project.scripts]
remains = "remains.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remains"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
